fix: 로깅 도입 및 동시성 제어 위해 product에 version 필드 추가, 에러 클래스 추가